@@ -23,8 +23,9 @@ import org.apache.giraph.graph.EdgeListVertex;
 import org.apache.giraph.graph.Vertex;
 import org.apache.giraph.graph.VertexReader;
 import org.apache.giraph.graph.VertexWriter;
-import org.apache.giraph.lib.TextVertexOutputFormat;
-import org.apache.giraph.lib.TextVertexOutputFormat.TextVertexWriter;
+import org.apache.giraph.io.GeneratedVertexInputFormat;
+import org.apache.giraph.io.TextVertexOutputFormat;
+import org.apache.giraph.io.TextVertexOutputFormat.TextVertexWriter;
 import org.apache.hadoop.io.FloatWritable;
 import org.apache.hadoop.io.IntWritable;
 import org.apache.hadoop.io.LongWritable;
@@ -110,8 +111,8 @@ public class SimpleSuperstepVertex extends
    * Simple VertexInputFormat that supports {@link SimpleSuperstepVertex}
    */
   public static class SimpleSuperstepVertexInputFormat extends
-      GeneratedVertexInputFormat<LongWritable,
-      IntWritable, FloatWritable, IntWritable> {
+    GeneratedVertexInputFormat<LongWritable,
+          IntWritable, FloatWritable, IntWritable> {
     @Override
     public VertexReader<LongWritable, IntWritable, FloatWritable, IntWritable>
     createVertexReader(InputSplit split, TaskAttemptContext context)
