@@ -2,6 +2,9 @@ Giraph Change Log
 
 Release 0.2.0 - unreleased
 
+  GIRAPH-218: Consolidate all I/O Format classes under one roof in lib/ directory.
+  (Eli Reisman via jghoman)
+
   GIRAPH-259: TestBspBasic.testBspPageRank is broken (majakabiljo via apresta)
 
   GIRAPH-256: Partitioning outgoing graph data during INPUT_SUPERSTEP by # of 
